Fix up community menu spacing

--- a/public/index.css
+++ b/public/index.css
@@ -499,11 +499,17 @@ h2.heading {
 	gap: 0.5em;
 	width: 100%;
 	font: inherit;
-	padding: 0.275rem 0;
+	padding: 0.4rem 0;
 	line-height: 1.3;
 	color: var(--theme-text-lighter);
 	text-decoration: none;
 	unicode-bidi: plaintext;
+}
+
+@media (min-width: 50em) {
+	.header-link a {
+		padding: 0.275rem 0;
+	}
 }
 
 .header-link:hover,
@@ -524,17 +530,9 @@ h2.heading {
 	opacity: 0.8;
 }
 
-.header-link.depth-3 {
-	padding-inline-start: 1rem;
-}
-.header-link.depth-4 {
-	padding-inline-start: 2rem;
-}
-
 /* Add line and padding on the left side */
 .header-link {
 	padding-inline-start: 1rem;
-	border-inline-start: 3px solid var(--theme-divider);
 }
 .header-link.depth-3 {
 	padding-inline-start: 2rem;
@@ -550,7 +548,7 @@ h2.heading {
 	}
 
 	.header-link {
-		border-inline-start-width: 4px;
+		border-inline-start: 4px solid var(--theme-divider);
 	}
 }
 
